--- a/public/assets/style/setup/reset.css
+++ b/public/assets/style/setup/reset.css
@@ -3,7 +3,7 @@
 }
 
 html {
-    color-scheme: light dark;
+    /* color-scheme: light dark; */
 }
 
 @media (prefers-reduced-motion: no-preference) {
