--- a/public/assets/style/cmps/BugPreview.css
+++ b/public/assets/style/cmps/BugPreview.css
@@ -13,3 +13,12 @@
     margin-inline-start: .5em;
     font-size: .9em;
 }
+
+.bug-list > li {
+    box-shadow: 0px 0px 4px 2px rgb(0 0 0 / 71%);
+
+
+    &:hover {
+        background-color: var(--color4);
+    }
+}
